versioned_docs/version-23.2/manage/kubernetes/networking/custom-services.mdx
---
title: Use a Custom Service for External Access
tags:
  - Kubernetes
description: How to configure the Helm chart to enable creating your own custom Services to provide external access to a Redpanda cluster.
---

<head>
    <meta name="title" content="Configure External Access through LoadBalancer Services | Redpanda Docs"/>
    <meta name="description" content="Stop the Helm chart from deploying Services that provide external access. Then, either create your own Services to provide external access or leave the deployment without external access."/>
    <link rel="canonical" href="https://docs.redpanda.com/docs/manage/kubernetes/networking/custom-services/" />
</head>

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import ValuesYaml from '../shared/_values-yaml.mdx'

By default, the Helm chart deploys a NodePort Service to provide external access to the Redpanda cluster. To use a custom Service, set `external.type` to `null`. Then, you can create your own Services to provide external access or leave the deployment without external access.

<Tabs groupId="kubernetes-tool">
<TabItem value="operator" label="Helm + Operator">

```yaml title="redpanda-cluster.yaml"
apiVersion: cluster.redpanda.com/v1alpha1
kind: Redpanda
metadata:
  name: redpanda
spec:
  clusterSpec:
    external:
      enabled: true
      type: null
      addresses:
      - <subdomain-or-ip-address-for-replica-0>
      - <subdomain-or-ip-address-for-replica-1>
      - <subdomain-or-ip-address-for-replica-2>
```

```bash
kubectl apply -f redpanda-cluster.yaml -n redpanda
```


</TabItem>
<TabItem value="helm" label="Helm">
<Tabs groupId="helm-config">
<TabItem value="values" label="--values">

```yaml title="disable-external-service.yaml"
external:
  enabled: true
  type: null
  addresses:
  - <subdomain-or-ip-address-for-replica-0>
  - <subdomain-or-ip-address-for-replica-1>
  - <subdomain-or-ip-address-for-replica-2>
```

```bash
helm upgrade --install redpanda redpanda/redpanda -n redpanda --create-namespace \
  --values disable-external-service.yaml --reuse-values
```

</TabItem>
<TabItem value="flags" label="--set">

```bash
helm upgrade --install redpanda redpanda/redpanda -n redpanda --create-namespace \
  --set external.enabled=true
  --set external.type=null
  --set "external.addresses={<subdomain-or-ip-address-for-replica-0>,<subdomain-or-ip-address-for-replica-1>,<subdomain-or-ip-address-for-replica-2>}"
```

</TabItem>
</Tabs>
</TabItem>
</Tabs>

Make sure to configure `external.addresses` with addresses that point to the worker node on which each Redpanda broker is running. The addresses must be listed in order of the StatefulSet replicas. For example, the first address in the list is assigned to the first replica (`redpanda-0` by default).

If you use a custom domain (`external.domain`), provide subdomains for each replica in `external.addresses`. This custom domain is appended to each subdomain (`<subdomain-for-replica-0>.<custom-domain>`).

## Next steps

- [Configure security](../../security) for your listeners.

- [Configure listeners](../configure-listeners).

## Suggested reading

- [Redpanda Helm Specification](../../../../reference/redpanda-helm-spec#external)
- [Redpanda CRD Reference](../../../../reference/crd)